# Laptop-Price-Predicter

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUG_FIXES_SUMMARY.md  BUG_FIX_DOCUMENTATION.md  BUG_FIX_REPORT.md  BUG_FIX_SUMMARY.md  CONTRIBUTING.md  IMPROVEMENTS_DOCUMENTATION.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENTS_README.md  LOGGING_IMPROVEMENTS.md  Laptop Price model(1).ipynb  Laptop Price model(1).py  Laptop Price model.ipynb  ML_IMPROVEMENTS_SUMMARY.md  MODEL_IMPROVEMENTS_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY.txt  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATIONS.md  PRE_COMMIT_SETUP.md  README.md  README_BENCHMARK.md  README_BUG_FIX.md  README_IMPROVEMENTS.md  README_PERFORMANCE.md  README_SECURITY.md  README_SECURITY_FIX.md  README_TESTS.md  SECURITY.md  SECURITY_FIX.md  SECURITY_FIX_SUMMARY.txt  SECURITY_SCAN_RESULTS.md  SETUP_COMPLETE.md  SETUP_INSTRUCTIONS.md  SUMMARY.md  TEST_COVERAGE_FIX.md  advanced_models_extension.py  (+60 more)
.github/: dependabot.yml
.github/workflows/: bandit.yml
artifacts/baseline/: manifest.json  metrics.json
config/: database.yaml  scrapers.yaml
data_collection/: __init__.py
data_collection/config/: config.yaml
data_collection/scrapers/: __init__.py
data_collection/storage/: __init__.py
data_collection/utils/: __init__.py
fixtures/: README.md  test_data.csv
scrapers/: __init__.py  base_scraper.py  exceptions.py  http_client.py
src/laptop_price/: __init__.py
tests/: __init__.py  conftest.py  test_model.py  test_pipeline.py  test_regression.py  test_transformations.py
utils/: storage_features.py
