[tool.poetry]
name = "laptop_price"
version = "0.1.0"
description = "Laptop price prediction"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "laptop_price", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = ">=1.5"
numpy = ">=1.24"
scikit-learn = ">=1.3"
joblib = ">=1.3"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
isort = "*"
flake8 = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]

[tool.flake8]
