[tool.poetry]
name = "laptop-price-baseline"
version = "0.1.0"
description = "Baseline model for laptop price prediction"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
numpy = "^1.21.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
